--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -24,9 +24,9 @@
   flex-direction: column;
   align-items: center;
 }
-.ab-form-container::-webkit-scrollbar {
+/* .ab-form-container::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .ab-form-header{
   width: 100%;
